--- a/report/media/progress.ini
+++ b/report/media/progress.ini
@@ -11,3 +11,4 @@ Cosmos: Possible Worlds;1,13,3
 The Boys;1,8,0;1,8,0
 LOVE DEATH + ROBOTS;1,18,18;2,8,0
 Stranger Things;1,8,1;2,9,0;3,8,0
+The Wheel of Time;1,6,0
