book and media report content update Mon 08/16/2021

--- a/report/media/progress.ini
+++ b/report/media/progress.ini
@@ -1,4 +1,8 @@
 Gunpowder Milkshake
+EVANGELION:1.11 YOU ARE (NOT) ALONE (rewatch)
+EVANGELION:2.22 YOU CAN (NOT) ADVANCE (rewatch)
+EVANGELION:3.33 YOU CAN (NOT) REDO (rewatch)
+EVANGELION:3.0+1.01 THRICE UPON A TIME
 Castlevania (Stop at Season 2);1,4,4;2,8,0
 The Witcher;1,8,0
 Attack on Titan;1,25,25;2,12,12;3,22,22;4,16,10
