book and media report content update Tue 08/17/2021

--- a/report/media/progress.ini
+++ b/report/media/progress.ini
@@ -1,5 +1,5 @@
 Gunpowder Milkshake
-EVANGELION:1.11 YOU ARE (NOT) ALONE (rewatch)
+EVANGELION:1.11 YOU ARE (NOT) ALONE (rewatch)^
 EVANGELION:2.22 YOU CAN (NOT) ADVANCE (rewatch)
 EVANGELION:3.33 YOU CAN (NOT) REDO (rewatch)
 EVANGELION:3.0+1.01 THRICE UPON A TIME
